VTVDA: Fix reorder queue size.

This size was incorrectly reduced in commit
9c17162168dc5dbb8d8316347a280268c76c8c64 [formerly 8cbe5d69e18a9c387cfc61adf826ae121cf89834].

This commit also adds DVLOG()s to most methods. These should
have been there from the beginning.

BUG=647723

Review-Url: https://codereview.chromium.org/2345633006
Cr-Commit-Position: refs/heads/master@{#419323}

Former-commit-id: 1eaf4265002a158eadc3645b3aa31cdb0aefb2fc